--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "import"
   ],
   "scripts": {
-    "test": "mocha ./test/*.test.js"
+    "test": "./test.sh",
+    "test:ci": "mocha ./test/*.test.js"
   },
   "dependencies": {
     "JSONStream": "1.1.1",
@@ -33,6 +34,7 @@
     "acquit": "0.4.0",
     "acquit-ignore": "0.0.3",
     "acquit-markdown": "0.0.2",
+    "chai": "^4.2.0",
     "lodash": "4.x",
     "mocha": "2.2.4"
   },
@@ -42,6 +44,7 @@
   "bin": "./bin/dookie.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/vkarpov15/dookie.git"
-  }
+    "url": "git://github.com/naterkane/dookie.git"
+  },
+  "license": "SEE LICENSE IN LICENSE"
 }
