--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dookie",
+  "name": "@naterkane/dookie",
   "version": "0.2.2",
   "description": "Stylus-inspired preprocessor for MongoDB data sets and fixtures",
   "keywords": [
