--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
   ],
   "scripts": {
     "test": "./test.sh",
-    "test:ci": "mocha ./test/*.test.js"
+    "test:ci": "mocha ./test/*.test.js  --exit "
   },
   "dependencies": {
-    "JSONStream": "1.1.1",
-    "clone": "2.1.1",
+    "JSONStream": "^1.3.5",
+    "clone": "^2.1.2",
     "co": "4.6.0",
-    "commander": "2.8.1",
+    "commander": "^2.19.0",
     "dot-component": "0.1.1",
-    "graceful-fs": "4.1.11",
-    "js-yaml": "3.2.1",
+    "graceful-fs": "^4.1.15",
+    "js-yaml": "^3.12.0",
     "lodash.get": "4.4.2",
     "minimatch": "3.0.4",
-    "mongodb": "~2.2.0",
-    "mongodb-extended-json": "1.7.0",
-    "mongodb-ns": "1.0.3",
+    "mongodb": "^2.2.0",
+    "mongodb-extended-json": "^1.10.1",
+    "mongodb-ns": "^2.0.0",
     "thunkify": "2.1.2"
   },
   "devDependencies": {
-    "acquit": "0.4.0",
-    "acquit-ignore": "0.0.3",
-    "acquit-markdown": "0.0.2",
+    "acquit": "^1.0.0",
+    "acquit-ignore": "^0.1.0",
+    "acquit-markdown": "^0.1.0",
     "chai": "^4.2.0",
     "lodash": "4.x",
-    "mocha": "2.2.4"
+    "mocha": "^5.2.0"
   },
   "engines": {
     "node": ">= 4.0.0"
